# serializer version: 1
# name: test_platform_setup_and_discovery[climate.air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 86.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'tuya.mvsdcwtskkezlnw5tk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.0,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioner',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 86.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.anbau-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.anbau',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.sq6fbd3pfkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.anbau-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Anbau',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.anbau',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[climate.bathroom_radiator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 70.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'holiday',
        'auto',
        'manual',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bathroom_radiator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.fc2ngmpckw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.bathroom_radiator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom radiator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 70.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'manual',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'holiday',
        'auto',
        'manual',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bathroom_radiator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.boiler_temperature_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.boiler_temperature_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 384>,
    'translation_key': None,
    'unique_id': 'tuya.zgiyrxflahjowpcckw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.boiler_temperature_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 57.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Boiler Temperature Controller',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 384>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.boiler_temperature_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.clima_cucina-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'middle',
        'high',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.clima_cucina',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'tuya.x7quooqakw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.clima_cucina-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 27.0,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'middle',
        'high',
        'auto',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Clima cucina',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 25.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.clima_cucina',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.el_termostato_de_la_cocina-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 7.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.el_termostato_de_la_cocina',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.LmLMc0ht1KW2zYAIkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.el_termostato_de_la_cocina-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 45.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'El termostato de la cocina',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 7.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4.6,
    }),
    'context': <ANY>,
    'entity_id': 'climate.el_termostato_de_la_cocina',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.empore-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.empore',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.paxijfx9fkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.empore-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Empore',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'manual',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 35.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.empore',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.floor_thermostat_kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.floor_thermostat_kitchen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.oq9ksabjz6tip49tkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.floor_thermostat_kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Floor Thermostat Kitchen',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'manual',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.floor_thermostat_kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.geti_solar_pv_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.geti_solar_pv_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.fcacn8iqbocuow7dsr',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.geti_solar_pv_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 60.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Geti Solar PV Water Heater',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 0>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.geti_solar_pv_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[climate.itc_308_wifi_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 212.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -40.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.itc_308_wifi_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'tuya.9Ry4oUpdAYq8Pe0Bkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.itc_308_wifi_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 34.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ITC-308-WIFI Thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 212.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -40.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 35.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.itc_308_wifi_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[climate.kabinet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'program',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.kabinet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.dn7cjik6kw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.kabinet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Кабінет',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'program',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 21.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.kabinet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.master_bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 88.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.master_bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.g1fmm26qhhrimmbitk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.master_bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 26.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Master Bedroom AC',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 88.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 75.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.master_bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.mini_split-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 90.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'off',
        'horizontal',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.mini_split',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 417>,
    'translation_key': None,
    'unique_id': 'tuya.zzz87dkfce6pdqxwtk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.mini_split-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 69.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mini-Split',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 90.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 417>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'off',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'off',
        'horizontal',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 66.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.mini_split',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.mr_pure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.mr_pure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.gnqwzcph94wj2sl5nq',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.mr_pure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mr. Pure',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 0>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.mr_pure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[climate.polotentsosushitel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 40.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'holiday',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.polotentsosushitel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.53apxfah2qoxb1cgkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.polotentsosushitel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Полотенцосушитель',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 40.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'holiday',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 5.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.polotentsosushitel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.salon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 5.9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.1,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
        'holiday',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.salon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.gm0whbftkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.salon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Salon',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 5.9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.1,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'manual',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
        'holiday',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 5.9,
    }),
    'context': <ANY>,
    'entity_id': 'climate.salon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.smart_thermostats-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 90.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.smart_thermostats',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.sb3zdertrw50bgogkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.smart_thermostats-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'smart thermostats',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 90.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'manual',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'auto',
        'manual',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.smart_thermostats',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.sove-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 86.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.sove',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'tuya.dt4whlrosmnldadvtk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.sove-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.0,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Sove',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 86.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 16.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.sove',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.term_prizemi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 70.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.5,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.term_prizemi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.jm2fsqtzuhqtbo5ykw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.term_prizemi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 23.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Term - Prizemi',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 70.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.5,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.term_prizemi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.wifi_smart_gas_boiler_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.wifi_smart_gas_boiler_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.j6mn1t4ut5end6ifkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.wifi_smart_gas_boiler_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.9,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WiFi Smart Gas Boiler Thermostat ',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.wifi_smart_gas_boiler_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_us_customary_system[climate.air_conditioner]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 86,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 23,
  })
# ---
# name: test_us_customary_system[climate.anbau]
  ReadOnlyDict({
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
  })
# ---
# name: test_us_customary_system[climate.bathroom_radiator]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 67,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 158,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 34,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 54,
  })
# ---
# name: test_us_customary_system[climate.boiler_temperature_controller]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 136,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 45,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
  })
# ---
# name: test_us_customary_system[climate.clima_cucina]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 81,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 77,
  })
# ---
# name: test_us_customary_system[climate.el_termostato_de_la_cocina]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 113,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 45,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 34,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 40,
  })
# ---
# name: test_us_customary_system[climate.empore]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 66,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 95,
  })
# ---
# name: test_us_customary_system[climate.floor_thermostat_kitchen]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -4,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 66,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 12,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
  })
# ---
# name: test_us_customary_system[climate.geti_solar_pv_water_heater]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 140,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 45,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
  })
# ---
# name: test_us_customary_system[climate.itc_308_wifi_thermostat]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 93,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 414,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -40,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 95,
  })
# ---
# name: test_us_customary_system[climate.kabinet]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 67,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 203,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 71,
  })
# ---
# name: test_us_customary_system[climate.master_bedroom_ac]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 79,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 190,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 61,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 167,
  })
# ---
# name: test_us_customary_system[climate.mini_split]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 69,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 90,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 66,
  })
# ---
# name: test_us_customary_system[climate.mr_pure]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 45,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
  })
# ---
# name: test_us_customary_system[climate.polotentsosushitel]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 32,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 104,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 41,
  })
# ---
# name: test_us_customary_system[climate.salon]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 69,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 43,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 32,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 43,
  })
# ---
# name: test_us_customary_system[climate.smart_thermostats]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 71,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 194,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 54,
  })
# ---
# name: test_us_customary_system[climate.sove]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 75,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 187,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 61,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 61,
  })
# ---
# name: test_us_customary_system[climate.term_prizemi]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 73,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 158,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 33,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 73,
  })
# ---
# name: test_us_customary_system[climate.wifi_smart_gas_boiler_thermostat]
  ReadOnlyDict({
    <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 77,
    <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 95,
    <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 41,
    <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 72,
  })
# ---
